--- a/css/custom.css
+++ b/css/custom.css
@@ -11505,7 +11505,7 @@ main section .container .row .contact-form h2, main section .container .row .con
   letter-spacing: 0.25em;
   padding: 1.5rem 1.5rem 0 1.5rem;
   font-weight: bolder;
-  color: #5c3d2e;
+  color: #2d2424;
 }
 main section .container .row .contact-form form {
   padding: 3em;
@@ -11514,11 +11514,13 @@ main section .container .row .contact-form form input, main section .container .
   border: none;
   outline: 0;
   background: none;
-  color: #e0c097;
-  border-bottom: 1px solid #e0c097;
+  color: #2d2424;
+}
+main section .container .row .contact-form form input, main section .container .row .contact-form form textarea {
+  border-bottom: 2px solid #2d2424;
 }
 main section .container .row .contact-form form label {
-  color: #e0c097;
+  color: #2d2424;
   font-size: 1.35rem;
   font-weight: lighter;
 }
