--- a/sass/layout/_forms.scss
+++ b/sass/layout/_forms.scss
@@ -4,6 +4,15 @@
 
 main{
     section{
+        .bg-forms{
+            background-image: url("https://res.cloudinary.com/ojedaweb/image/upload/v1635390677/header-granos-cafe_fiaeih.jpg");
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            max-width: 100%;
+            height: 160px;
+            
+        }
         .container{
             
             .row{
