se sube imagen para contacto y reservas + favicon

--- a/sass/layout/_forms.scss
+++ b/sass/layout/_forms.scss
@@ -5,12 +5,12 @@
 main{
     section{
         .bg-forms{
-            background-image: url("https://res.cloudinary.com/ojedaweb/image/upload/v1635390677/header-granos-cafe_fiaeih.jpg");
+            background-image: url("https://res.cloudinary.com/ojedaweb/image/upload/v1635450222/granos-de-cafe-sobre-fondo-blanco_yngtel.jpg");
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
-            max-width: 100%;
-            height: 160px;
+            width: 100%;
+            height: 100vh;
             
         }
         .container{
