--- a/css/custom.css
+++ b/css/custom.css
@@ -11501,12 +11501,12 @@ footer .copy p span {
 /* Variables */
 /*Styles comunes a los Forms*/
 main section .bg-forms {
-  background-image: url("https://res.cloudinary.com/ojedaweb/image/upload/v1635390677/header-granos-cafe_fiaeih.jpg");
+  background-image: url("https://res.cloudinary.com/ojedaweb/image/upload/v1635450222/granos-de-cafe-sobre-fondo-blanco_yngtel.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  max-width: 100%;
-  height: 160px;
+  width: 100%;
+  height: 100vh;
 }
 main section .container .row .contact-form h2, main section .container .row .contact-form .h2 {
   text-transform: uppercase !important;
